pamc/src/tests/sample_code/should_fail/single_file/parse/transparency/super9.ph
let(super9) x = Type;
